# blind-audit

./: .env  .gitignore  README.md  docker-compose.yml  run.ps1  run.sh  run_tests.ps1  test_integration.py
challenger/: Dockerfile  build.sh  nginx.conf  pii_detector.rs
challenger/challenges/: e2e_fail.rs  e2e_test.rs  ml_check.rs  pii_detector.rs
challenger/web/: app.py
challenger/web/templates/: index.html
data-provider/: Dockerfile  server.py
data-provider/app/: dataset.py  server.py  zk_bridge.js
data-provider/dataset/: ml_intro.txt  pii_leak.txt  safe_recipe.txt
data-provider/harness/: CMakeLists.txt  Dockerfile  README.md  harness.sh  pii_detector.c
data-provider/harness/include/: harness.h
data-provider/harness/src/: crypto_sim.c  harness.c  wasm_runtime.c
judge/: Dockerfile
judge/app/: gemma.py  server.py
pki/: Dockerfile  setup-pki.sh
results/: nginx.conf
tests/: e2e.py  e2e_test.py  e2e_zk.py
zk-circuit/: Dockerfile  build.sh  merkle_proof.circom  merkle_proof.wasm  merkle_proof_final.zkey  package.json
